--- a/mail/themes/osx/mail/compose/messengercompose.css
+++ b/mail/themes/osx/mail/compose/messengercompose.css
@@ -279,6 +279,11 @@ toolbar[brighttext] #button-print {
   margin-inline-start: initial;
 }
 
+#msgIdentityPopup > menuitem[_moz-menuactive="true"] > .menu-description {
+  color: HighlightText;
+  opacity: .7;
+}
+
 #addresses-box {
   margin: 4px 6px;
 }
@@ -294,7 +299,7 @@ toolbar[brighttext] #button-print {
 }
 
 #attachmentBucketSize {
-  color: #888a85;
+  color: GrayText;
 }
 
 /* ::::: attachment reminder ::::: */
