--- a/mail/themes/linux/mail/primaryToolbar.css
+++ b/mail/themes/linux/mail/primaryToolbar.css
@@ -53,218 +53,114 @@
 /* ::::: primary toolbar buttons ::::: */
 
 #button-getmsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#getmsg");
+  list-style-image: url("chrome://messenger/skin/icons/getmsg.svg");
 }
 
 #button-newmsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#newmsg");
+  list-style-image: url("chrome://messenger/skin/icons/newmsg.svg");
 }
 
 #button-address {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#address");
+  list-style-image: url("chrome://messenger/skin/icons/address.svg");
 }
 
 #button-reply {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#reply");
+  list-style-image: url("chrome://messenger/skin/icons/reply.svg");
 }
 
 #button-replyall {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#replyall");
+  list-style-image: url("chrome://messenger/skin/icons/replyall.svg");
 }
 
 #button-replylist {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#replylist");
+  list-style-image: url("chrome://messenger/skin/icons/replylist.svg");
 }
 
 #button-forward {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#forward");
+  list-style-image: url("chrome://messenger/skin/icons/forward.svg");
 }
 
 .delete-button {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#delete");
+  list-style-image: url("chrome://messenger/skin/icons/delete.svg");
 }
 
 .junk-button {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#junk");
+  list-style-image: url("chrome://messenger/skin/icons/junk.svg");
 }
 
 #button-print {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#print");
+  list-style-image: url("chrome://messenger/skin/icons/print.svg");
 }
 
 #button-stop {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#stop");
+  list-style-image: url("chrome://messenger/skin/icons/stop.svg");
 }
 
 #button-file {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#file");
+  list-style-image: url("chrome://messenger/skin/icons/file.svg");
 }
 
 #button-nextUnread {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#nextUnread");
+  list-style-image: url("chrome://messenger/skin/icons/nextunread.svg");
 }
 
 #button-previousUnread {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#previousUnread");
+  list-style-image: url("chrome://messenger/skin/icons/previousunread.svg");
 }
 
 #button-mark {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#mark");
+  list-style-image: url("chrome://messenger/skin/icons/mark.svg");
 }
 
 #button-tag {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#tag");
+  list-style-image: url("chrome://messenger/skin/icons/tag.svg");
 }
 
 #button-goback {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#goback");
+  list-style-image: url("chrome://messenger/skin/icons/goback.svg");
 }
 
 #button-goforward {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#goforward");
+  list-style-image: url("chrome://messenger/skin/icons/goforward.svg");
 }
 
 #button-compact {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#compact");
+  list-style-image: url("chrome://messenger/skin/icons/compact.svg");
 }
 
 #button-archive {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#archive");
+  list-style-image: url("chrome://messenger/skin/icons/archive.svg");
 }
 
 #button-chat {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#chat");
+  list-style-image: url("chrome://messenger/skin/icons/chat.svg");
 }
 
 #button-nextMsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#nextMsg");
+  list-style-image: url("chrome://messenger/skin/icons/nextmsg.svg");
 }
 
 #button-previousMsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#previousMsg");
+  list-style-image: url("chrome://messenger/skin/icons/previousmsg.svg");
 }
 
 #qfb-show-filter-bar {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#filter");
+  list-style-image: url("chrome://messenger/skin/icons/filter.svg");
 }
 
 #button-showconversation {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#conversation");
+  list-style-image: url("chrome://messenger/skin/icons/conversation.svg");
 }
 
 .button-appmenu {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#appButton");
+  list-style-image: url("chrome://messenger/skin/icons/appbutton.svg");
   min-width: 35px !important;
   margin-right: 4px;
   margin-left: 4px;
 }
 
-toolbar[brighttext] #button-getmsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#getmsg-inverted");
-}
-
-toolbar[brighttext] #button-newmsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#newmsg-inverted");
-}
-
-toolbar[brighttext] #button-address {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#address-inverted");
-}
-
-toolbar[brighttext] #button-reply {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#reply-inverted");
-}
-
-toolbar[brighttext] #button-replyall {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#replyall-inverted");
-}
-
-toolbar[brighttext] #button-replylist {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#replylist-inverted");
-}
-
-toolbar[brighttext] #button-forward {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#forward-inverted");
-}
-
-toolbar[brighttext] .delete-button {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#delete-inverted");
-}
-
-toolbar[brighttext] .junk-button {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#junk-inverted");
-}
-
-toolbar[brighttext] #button-print {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#print-inverted");
-}
-
-toolbar[brighttext] #button-stop {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#stop-inverted");
-}
-
-toolbar[brighttext] #button-file {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#file-inverted");
-}
-
-toolbar[brighttext] #button-next > #button-nextUnread {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#nextUnread-inverted");
-}
-
-toolbar[brighttext] #button-previous > #button-previousUnread {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#previousUnread-inverted");
-}
-
-toolbar[brighttext] #button-mark {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#mark-inverted");
-}
-
-toolbar[brighttext] #button-tag {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#tag-inverted");
-}
-
-toolbar[brighttext] #button-goback {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#goback-inverted");
-}
-
-toolbar[brighttext] #button-goforward {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#goforward-inverted");
-}
-
-toolbar[brighttext] #button-compact {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#compact-inverted");
-}
-
-toolbar[brighttext] #button-archive {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#archive-inverted");
-}
-
-toolbar[brighttext] #button-chat {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#chat-inverted");
-}
-
-toolbar[brighttext] #button-nextMsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#nextMsg-inverted");
-}
-
-toolbar[brighttext] #button-previousMsg {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#previousMsg-inverted");
-}
-
-toolbar[brighttext] #qfb-show-filter-bar {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#filter-inverted");
-}
-
-toolbar[brighttext] #button-showconversation {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#conversation-inverted");
-}
-
-toolbar[brighttext] .button-appmenu {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#appButton-inverted");
-}
-
-toolbar > #button-chat[unreadMessages="true"] {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#chat-unread");
+#button-chat[unreadMessages="true"] {
+  fill: var(--toolbarbutton-icon-fill-attention);
 }
 
 .button-appmenu .toolbarbutton-text,
@@ -289,10 +185,6 @@ toolbar[mode="text"] .button-appmenu .toolbarbutton-icon {
 
 #folderPane-toolbar > :-moz-any(*) + :-moz-any(*) {
   margin-inline-start: 2px;
-}
-
-#palette-box #qfb-show-filter-bar {
-  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#filter") !important;
 }
 
 /* Force the folder location and mail view items to fit in the available width
