--- a/calendar/lightning/themes/common/lightning.css
+++ b/calendar/lightning/themes/common/lightning.css
@@ -35,3 +35,8 @@ toolbarpaletteitem > .msgHeaderView-button .toolbarbutton-icon,
   width: 18px;
   height: 18px;
 }
+
+/* Write button */
+#newMsgButton-mail-menuitem {
+  list-style-image: url(chrome://messenger/skin/icons/newmsg.svg);
+}
